cmake_minimum_required(VERSION 3.23)
project(lab4-folayan_williamson_lab4)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab4_folayan_williamson_lab4 main.cpp CommonFunctions.cpp CommonFunctions.h GameBase.cpp GameBase.h Header.h piece.cpp piece.h TicTacToeGame.cpp TicTacToeGame.h GomokuGame.cpp GomokuGame.h)
